changed to lowercase

--- a/PlayWinningChessDiagram1.html
+++ b/PlayWinningChessDiagram1.html
@@ -123,7 +123,7 @@ body {
   <div class="mySlides fade">
     <div class="numbertext">2 / 4</div>
     <div class="slide-content">
-      <img src="Images/Diagram5.png">
+      <img src="Images/diagram5.png">
       <div class="commentary">
         <h3>Commentary for Image 2</h3>
         <p>Here you can write notes, analysis, or explanations about the images 
@@ -137,7 +137,7 @@ body {
   <div class="mySlides fade">
     <div class="numbertext">3 / 4</div>
     <div class="slide-content">
-      <img src="Images/Diagram6.png">
+      <img src="Images/diagram6.png">
       <div class="commentary">
         <h3>Commentary for Image 3</h3>
         <p>The rook moves to the third state.
@@ -150,7 +150,7 @@ body {
   <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
     <div class="slide-content">
-      <img src="Images/Diagram7.png">
+      <img src="Images/diagram7.png">
       <div class="commentary">
         <h3>Commentary for Image 4</h3>
         <p>Here you can write notes, analysis, or explanations about the images 
