--- a/thesovietchessprimer4-7.html
+++ b/thesovietchessprimer4-7.html
@@ -99,21 +99,16 @@ body {
 
   <!-- Slide 1 -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 4</div>
+    <div class="numbertext">1 / 6</div>
     <div class="slide-content">
       <img src="Images/diagram4.png">
       <div class="commentary">
         <h3>Commentary for Image 1</h3>
-        <p>This is the explanation or analysis related to the first image.
-          asdfasdffffffffffffffffffffffffffffffffffffffffffffffffffffffffffsdfas
-          asdfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-          asdfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-          asdfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-          asdfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-          asdfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-          asdfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-          asdfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-          asdfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+        <p>The rook moves along the the ranks and files, in any direction and 
+          over any distance.<br>
+          In the position in Diagram 4, the rook can move to any of the fourteen
+          squares indicated. The mobility of the rook, as of any other piece, is 
+          reduced if there are other pieces in its line of movement.
         </p>
       </div>
     </div>
@@ -121,26 +116,32 @@ body {
 
   <!-- Slide 2 -->
   <div class="mySlides fade">
-    <div class="numbertext">2 / 4</div>
+    <div class="numbertext">2 / 6</div>
     <div class="slide-content">
       <img src="Images/diagram5.png">
       <div class="commentary">
         <h3>Commentary for Image 2</h3>
-        <p>Here you can write notes, analysis, or explanations about the images 
-          shown in the slideshow. You can update this section to display 
-          whatever commentary you’d like.</p>
+        <p>In the position in the Diagram 5, there are only nine vacant squares
+          that the white rook can move to. The rook may also, however, capture
+          the enemy pawn on e7 (by removing the pawn from the board and 
+          occupying the e7-square itself). Thus, the total number of possible 
+          moves for the rook in Diagram 5 is ten. 
+        </p>
       </div>
     </div>
   </div>
 
   <!-- Slide 3 -->
   <div class="mySlides fade">
-    <div class="numbertext">3 / 4</div>
+    <div class="numbertext">3 / 6</div>
     <div class="slide-content">
       <img src="Images/diagram6.png">
       <div class="commentary">
         <h3>Commentary for Image 3</h3>
-        <p>The rook moves to the third state.
+        <p>The bishop moves only along the diagonals, in any direction and over
+          any distance. The greatest number of moves that a bishop may have at
+          its disposal is 13 (this is when the bishop is placed in the centre, 
+          that is on one of the squares e4, d4, e5 and d5).
         </p>
       </div>
   </div>
@@ -148,14 +149,52 @@ body {
 
   <!-- Slide 4 -->
   <div class="mySlides fade">
-    <div class="numbertext">4 / 4</div>
+    <div class="numbertext">4 / 6</div>
+    <div class="slide-content">
+      <img src="Images/diagram6.2.png">
+      <div class="commentary">
+        <h3>Commentary for Image 4</h3>
+        <p>On b7, the bishop would have only 9 moves available ...
+        </p>
+      </div>
+  </div>
+</div>
+
+  <!-- Slide 5 -->
+  <div class="mySlides fade">
+    <div class="numbertext">5 / 6</div>
+    <div class="slide-content">
+      <img src="Images/diagram6.3.png">
+      <div class="commentary">
+        <h3>Commentary for Image 4</h3>
+        <p>... and on a1, it would have no more than 7. Thus the bishop's 
+          mobility is less than that of the rook, which on an open board always
+          has 14 moves, no matter which square it is on.<br>
+          Furthermore, the bishop operates on squares of one colour only – the 
+          light squares or the dark squares (hence we use the expressions 
+          "light-squared bishop" and "dark-squared bishop"), whereas all the 
+          squares on the board, irrespective of colour, are accessible to the
+          rook's action.<br>
+          This goes to show that the rook is stronger than the bishop.
+        </p>
+      </div>
+  </div>
+</div>
+
+  <!-- Slide 6 -->
+  <div class="mySlides fade">
+    <div class="numbertext">6 / 6</div>
     <div class="slide-content">
       <img src="Images/diagram7.png">
       <div class="commentary">
         <h3>Commentary for Image 4</h3>
-        <p>Here you can write notes, analysis, or explanations about the images 
-          shown in the slideshow. You can update this section to display 
-          whatever commentary you’d like.</p>
+        <p>The queen is the strongest piece of all; it can move like a rook 
+          <i>and</i> a bishop. On an open board it has a choice of 27 moves from 
+          any of the centre squares.<br>
+          Thanks to its immense mobility and also to its option to making 
+          diagonal moves on either the light or the dark squares, the queen
+          proves to be a good deal stronger than a rook and a bishop combined.
+        </p>
       </div>
     </div>
   </div>
