change Image to Diagram

--- a/thesovietchessprimer4-7.html
+++ b/thesovietchessprimer4-7.html
@@ -103,7 +103,7 @@ body {
     <div class="slide-content">
       <img src="Images/diagram4.png">
       <div class="commentary">
-        <h3>Commentary for Image 1</h3>
+        <h3>Commentary for Diagram 4</h3>
         <p>The rook moves along the the ranks and files, in any direction and 
           over any distance.<br>
           In the position in Diagram 4, the rook can move to any of the fourteen
@@ -120,7 +120,7 @@ body {
     <div class="slide-content">
       <img src="Images/diagram5.png">
       <div class="commentary">
-        <h3>Commentary for Image 2</h3>
+        <h3>Commentary for Diagram 5</h3>
         <p>In the position in the Diagram 5, there are only nine vacant squares
           that the white rook can move to. The rook may also, however, capture
           the enemy pawn on e7 (by removing the pawn from the board and 
@@ -137,7 +137,7 @@ body {
     <div class="slide-content">
       <img src="Images/diagram6.png">
       <div class="commentary">
-        <h3>Commentary for Image 3</h3>
+        <h3>Commentary for Diagram 6 (1)</h3>
         <p>The bishop moves only along the diagonals, in any direction and over
           any distance. The greatest number of moves that a bishop may have at
           its disposal is 13 (this is when the bishop is placed in the centre, 
@@ -153,7 +153,7 @@ body {
     <div class="slide-content">
       <img src="Images/diagram6.2.png">
       <div class="commentary">
-        <h3>Commentary for Image 4</h3>
+        <h3>Commentary for Diagram 6 (2)</h3>
         <p>On b7, the bishop would have only 9 moves available ...
         </p>
       </div>
@@ -166,7 +166,7 @@ body {
     <div class="slide-content">
       <img src="Images/diagram6.3.png">
       <div class="commentary">
-        <h3>Commentary for Image 4</h3>
+        <h3>Commentary for Diagram 6 (3)</h3>
         <p>... and on a1, it would have no more than 7. Thus the bishop's 
           mobility is less than that of the rook, which on an open board always
           has 14 moves, no matter which square it is on.<br>
@@ -187,7 +187,7 @@ body {
     <div class="slide-content">
       <img src="Images/diagram7.png">
       <div class="commentary">
-        <h3>Commentary for Image 4</h3>
+        <h3>Commentary for Diagram 7</h3>
         <p>The queen is the strongest piece of all; it can move like a rook 
           <i>and</i> a bishop. On an open board it has a choice of 27 moves from 
           any of the centre squares.<br>
