--- a/thesovietchessprimer4-7.html
+++ b/thesovietchessprimer4-7.html
@@ -99,7 +99,7 @@ body {
 
   <!-- Slide 1 -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 6</div>
+    <div class="numbertext">1 / 8</div>
     <div class="slide-content">
       <img src="Images/diagram4.png">
       <div class="commentary">
@@ -116,7 +116,7 @@ body {
 
   <!-- Slide 2 -->
   <div class="mySlides fade">
-    <div class="numbertext">2 / 6</div>
+    <div class="numbertext">2 / 8</div>
     <div class="slide-content">
       <img src="Images/diagram5.png">
       <div class="commentary">
@@ -133,7 +133,7 @@ body {
 
   <!-- Slide 3 -->
   <div class="mySlides fade">
-    <div class="numbertext">3 / 6</div>
+    <div class="numbertext">3 / 8</div>
     <div class="slide-content">
       <img src="Images/diagram6.png">
       <div class="commentary">
@@ -149,7 +149,7 @@ body {
 
   <!-- Slide 4 -->
   <div class="mySlides fade">
-    <div class="numbertext">4 / 6</div>
+    <div class="numbertext">4 / 8</div>
     <div class="slide-content">
       <img src="Images/diagram6.2.png">
       <div class="commentary">
@@ -162,7 +162,7 @@ body {
 
   <!-- Slide 5 -->
   <div class="mySlides fade">
-    <div class="numbertext">5 / 6</div>
+    <div class="numbertext">5 / 8</div>
     <div class="slide-content">
       <img src="Images/diagram6.3.png">
       <div class="commentary">
@@ -183,7 +183,7 @@ body {
 
   <!-- Slide 6 -->
   <div class="mySlides fade">
-    <div class="numbertext">6 / 6</div>
+    <div class="numbertext">6 / 8</div>
     <div class="slide-content">
       <img src="Images/diagram7.png">
       <div class="commentary">
@@ -198,6 +198,53 @@ body {
       </div>
     </div>
   </div>
+
+    <!-- Slide 7 -->
+  <div class="mySlides fade">
+    <div class="numbertext">7 / 8</div>
+    <div class="slide-content">
+      <img src="Images/diagram8.1.png">
+      <div class="commentary">
+        <h3>Commentary for Diagram 8</h3>
+        <p>In this diagram, eight queens are placed in such a way that not one 
+          of them is within capturing range of another. In 1862, Carl Jaenisch
+          proved that 92 such configurations are possible. From the solutions he 
+          gave, we have selected the one that is simplest in outward appearance.
+          Try to find another one for yourself.
+        </p>
+      </div>
+  </div>
+</div>
+
+    <!-- Slide 8 -->
+  <div class="mySlides fade">
+    <div class="numbertext">8 / 8</div>
+    <div class="slide-content">
+      <img src="Images/diagram8.2.png">
+      <div class="commentary">
+        <h3>Solution to Diagram 8</h3>
+        <p>The eight queens puzzle is the problem of placing eight chess queens 
+          on an 8×8 chessboard so that no two queens threaten each other; thus, 
+          a solution requires that no two queens share the same row, column, or 
+          diagonal.<br>
+          The eight queens puzzle has 92 distinct solutions. If solutions that 
+          differ only by the symmetry operations of rotation and reflection of 
+          the board are counted as one, the puzzle has 12 solutions. These are 
+          called <i>fundamental solutions</i>.<br>
+          A fundamental solution usually has eight variants (including its 
+          original form) obtained by rotating 90, 180, or 270° and then 
+          reflecting each of the four rotational variants in a mirror in a fixed
+           position. However, one of the 12 fundamental solutions is identical 
+           to its own 180° rotation, so has only four variants (itself and its 
+           reflection, its 90° rotation and the reflection of that). Thus, the 
+           total number of distinct solutions is 11×8 + 1×4 = 92.
+
+           Another solution can be obtained, for example by a simple reflection 
+           of Diagram 8.
+        </p>
+      </div>
+  </div>
+</div>
 
   <!-- Navigation arrows -->
   <a class="prev" onclick="plusSlides(-1)">❮</a>
