--- a/thesovietchessprimer4-7.html
+++ b/thesovietchessprimer4-7.html
@@ -237,10 +237,9 @@ body {
            position. However, one of the 12 fundamental solutions is identical 
            to its own 180° rotation, so has only four variants (itself and its 
            reflection, its 90° rotation and the reflection of that). Thus, the 
-           total number of distinct solutions is 11×8 + 1×4 = 92.
-
-           Another solution can be obtained, for example by a simple reflection 
-           of Diagram 8.
+           total number of distinct solutions is 11×8 + 1×4 = 92.<br>
+           The solution shown here is a mirror image of Diagram 8 obtained by
+           reflection.
         </p>
       </div>
   </div>
