maybe the last commit ...

--- a/thesovietchessprimer4-7.html
+++ b/thesovietchessprimer4-7.html
@@ -245,6 +245,24 @@ body {
   </div>
 </div>
 
+    <!-- Slide 9 -->
+  <div class="mySlides fade">
+    <div class="numbertext">9 / 8</div>
+    <div class="slide-content">
+      <img src="Images/diagram9.png">
+      <div class="commentary">
+        <h3>Commentary for Diagram 9</h3>
+        <p>The knight's move is more involved than that of the other pieces. It
+          can jump in any direction across one square and onto a square of the 
+          opposite colour to the one it is starting from. The knight, so to 
+          speak, takes a path that is mid-way between a rook's move and a 
+          bishop's move. But whereas the rook and bishop can go any distance, 
+          the knight only jumps across one rank or file.
+        </p>
+      </div>
+  </div>
+</div>
+
   <!-- Navigation arrows -->
   <a class="prev" onclick="plusSlides(-1)">❮</a>
   <a class="next" onclick="plusSlides(1)">❯</a>
